// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render summary with 1 expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totaling 
    $2.35
  </h1>
</div>
`;

exports[`should correctly render summary with mutiply expenses 1`] = `
<div>
  <h1>
    Viewing 
    3
     
    expenses
     totaling 
    $2,555,555.35
  </h1>
</div>
`;
